--- a/styles/def.css
+++ b/styles/def.css
@@ -1,13 +1,97 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Zen Maru Gothic', sans-serif;
+    font-weight: 700;
+}
+
+body {
+    background-attachment:fixed !important;
+    background: linear-gradient(30deg, #636363 0%, #202020 100%);
 }
 
 .container {
-    width: 100%;
     max-width: 1170px;
-    background-color: #f1f1f1;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    margin: 0 auto; 
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+header {
+    position: fixed;
+    width: 100%;
+    height: 65px;
+    background-color: #032c01c0;
+    color: #fff;
+    float: left;
+    backdrop-filter: blur(px);
+}
+
+.header-left {
+    float: left;
+}
+
+header .logo {
+    float: left;
+    font-size: 40px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+header nav {
+    display: block;
+    padding-left: 330px;
+    
+}
+
+header ul {
+    display: inline-block;
+    padding-inline-start: 0;
+    list-style-position: inside;
+    list-style-type: none;
+}
+
+header li {
+    display: inline-block;
+}
+
+nav li a {
+    font-size: 16px;
+    color: #fff;
+    display: block;
+    padding: 20.5px;
+    color: #fff;
+}
+
+nav li a:hover {
+    background-color: #12590f;
+}
+
+header a {
+    color: hsl(0, 0%, 100%);
+    
+}
+
+.header-right {
+    float: right;
+    padding-right: 20px;
+    padding-top: 20px;
+}
+
+.header-right a {
+    color: white;
+    padding: 20.5px;
+    display: none;
+}
+
+.header-right a:hover {
+    background-color: #12590f;
 }
